--- a/appuno/pom.xml
+++ b/appuno/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.tallerspring</groupId>
+	<groupId>com.prueba.entrega</groupId>
 	<artifactId>app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>app</name>
